k8s/shopping-cart-solution/istio/traffic/vs/back-office-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: back-office-vs
spec:
  hosts:
    - back-office
  http:
    - match:
        - uri:
            prefix: /api/data
      route:
        - destination:
            host: back-office
            port:
              number: 9999
            subset: v1
          weight: 100
