k8s/shopping-cart-solution/istio/traffic/vs/inventory-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory-vs
spec:
  hosts:
    - inventory
  http:
    - match:
        - uri:
            prefix: /api/data
      route:
        - destination:
            host: inventory
            port:
              number: 9999
            subset: v1
          weight: 100
