k8s/shopping-cart-solution/istio/traffic/vs/order-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-vs
spec:
  hosts:
    - order
  http:
    - match:
        - uri:
            prefix: /api/data
      route:
        - destination:
            host: order
            port:
              number: 9999
            subset: v1
          weight: 100
