k8s/shopping-cart-solution/istio/traffic/vs/user-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-vs
spec:
  hosts:
    - user
  http:
    - match:
        - uri:
            prefix: /api/data
      route:
        - destination:
            host: user
            port:
              number: 9999
            subset: v1
          weight: 100
